# cineconecta_films

./: CMakeLists.txt  dockerfile
src/: main.cpp
src/controller/: LogroController.cpp
